# AudiobookMakerPy

./: .gitignore  AudiobookMakerPy - Copy.py  AudiobookMakerPy.bat  AudiobookMakerPy.py  CLAUDE.md  LICENSE  README.md  STREAMING_ARCHITECTURE.md  build_executable.bat  build_executable.py  claude_plan.md  exceptions.py  gemini_plan.md  progress_tracker.py  pyproject.toml  requirements-dev.txt  requirements.txt  resource_manager.py  setup.py  validation.py
.claude/: settings.local.json
docs/: API.md  CHANGELOG.md  README.md  TROUBLESHOOTING.md  USAGE.md
legacy/: AudiobookMakerPy.py  README.md
scripts/: AudiobookMakerPy.bat  build.py  install_deps.sh
src/: audiobookmaker.py
src/audiobookmaker/: __init__.py  cli.py  exceptions.py  gui.py
src/audiobookmaker/core/: __init__.py  concatenator.py  converter.py  metadata.py  processor.py
src/audiobookmaker/ui/: __init__.py  main_window.py
src/audiobookmaker/ui/widgets/: __init__.py  chapters_tab.py  cover_tab.py  input_tab.py  output_tab.py  processing_tab.py
src/audiobookmaker/utils/: __init__.py  file_utils.py  progress_tracker.py  resource_manager.py  validation.py
tests/: __init__.py  conftest.py
tests/test_core/: __init__.py  test_metadata.py  test_processor.py
tests/test_utils/: __init__.py  test_file_utils.py
